<resources>
    <string name="app_name">BGG Companion</string>
    <string name="app_name_hotlist">BGG Companion: The Hotness</string>
    <string name="title_activity_detail">…</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="share_text">Check this game on BoardGameGeek! \n%1$s (http://www.boardgamegeek.com/boardgame/%2$s)</string>

    <string name="hotlist_row_thumbnail_description">Board Game Thumbnail</string>

    <string name="expand_buton_description">expand buton</string>
    <string name="detail_players_label">Players</string>
    <string name="detail_play_time_label">Play Time</string>
    <string name="detail_age_label">Age</string>
    <string name="detail_mechanics_label">Mechanics</string>
    <string name="detail_categories_label">Categories</string>
    <string name="detail_families_label">Families</string>
    <string name="detail_designers_label">Designers</string>
    <string name="detail_publishers_label">Publishers</string>

    <string name="detail_players_content">%1$d to %2$d</string>
    <string name="detail_play_time_content">%1$d to %2$d min</string>
    <string name="detail_min_age_content">%1$d and up</string>
    <string name="bgg_companion">BGG Companion</string>
    <string name="powered_by">Powered by</string>
    <string name="powered_by2">BoardGameGeek XMLAPI2</string>
    <string name="boardgamegeek_trademark">Geekdo, BoardGameGeek, the Geekdo logo,</string>
    <string name="boardgamegeek_trademark2">and the BoardGameGeek logo are</string>
    <string name="boardgamegeek_trademark3">trademarks of BoardGameGeek, LLC.</string>
    <string name="developed_by">Developed By:</string>
    <string name="author" translatable="false">Benjamin Molina Alfonzo</string>
    <string name="version_label">v. %1$s</string>
    <string name="about_libraries_title">Libraries Used</string>
    <string name="nav_label_the_hotness">The Hotness</string>
    <string name="nav_label_search">Search</string>
    <string name="nav_label_about">About</string>

    <string name="search_edit_hint">Search for…</string>
    <string name="search_button_description">Search button</string>

    <string name="transition_name_image">transition:IMAGE</string>

    <string name="search_edit_size_error">"More than 3 characters needed"</string>
    <string name="search_snackbar_no_results">No results for that query</string>
    <string name="snackbar_no_internet">You need Internet connection to search</string>
    <string name="snackbar_no_internet_initial"> You need Internet connection for the initial download</string>
    <string name="snackbar_action_retry">Retry</string>
    <string name="snackbar_parse_error">Communications error, please retry en a moment</string>


</resources>
