<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_hot"
            android:icon="@drawable/format_list_numbers"
            android:title="@string/nav_label_the_hotness" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/magnify"
            android:title="@string/nav_label_search" />
    </group>

    <group android:id="@+id/group2">
            <!--<item-->
                <!--android:id="@+id/nav_settings"-->

                <!--android:title="Settings" />-->
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/library"
                android:title="@string/nav_label_about" />
    </group>

</menu>
